app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-py
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: hello-world-py
