app/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: hello-world-py
spec:
  parentRefs:
    - name: luban-gateway
      namespace: gateway
  hostnames:
    - "hello-world-py.apps.metasync.cc"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hello-world-py
          port: 80
